# rust_tetris

./: .gitignore  Cargo.toml  README.md
src/: app.rs  constant.rs  define.rs  event.rs  examples.rs  main.rs  main_state.rs  procedure.rs  runtime.rs  t_state.rs  t_updatable.rs  test.rs  tools.rs
src/define/: enum_define.rs  fn_define.rs
src/examples/: mod.rs  mod_02_hello_world.rs
src/procedure/: procedure_main_ui.rs  procedure_over.rs  procedure_playing.rs
src/runtime/: app_components.rs  controller.rs  data.rs  event.rs  input.rs  procedure.rs
src/runtime/data/: block_area.rs  play_field.rs  playing_data.rs  teri_grid.rs  tetrimino.rs
src/runtime/procedure/: playing_state_enum.rs  procedure_main_ui.rs  procedure_over.rs  procedure_playing.rs  procedure_test_draw_block.rs  procedure_test_draw_text.rs  t_procedure_param.rs
src/t_state/: StateEnum.rs
src/test/: test_event.rs  test_logger.rs  test_procedure.rs
