[package]
name = "rust_tetris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.0"
num_enum = "0.7.3"
colored = "2.0"
rand = "0.8"

[features]
# 包含调试日志代码 / Include debug log code 
debug_log = []